# projet_rust_4eme_annee

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: HashCash.rs  RecoverSecret.rs  hash_cash.rs  main.rs  recover_secret.rs
common/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  main.rs  structures.rs
