[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7.0"
byteorder = "1.4.3"
